8180612: [ppc] assert failure in cpu/ppc/vm/assembler_ppc.hpp due to immediate value out of range

Change RTM flags type to 'int' and set value range

Reviewed-by: simonis, kvn